Adding logic to provide customer reference while creating orders